--- a/pages/girls dress.html
+++ b/pages/girls dress.html
@@ -18,8 +18,8 @@
                 <p>Free Shipping On Domestic Orders Over $150</p>
             </div>
             <div class="rightCon">
-                <a href="./pages/login.html"><p>Login </a>/ <a href="./pages/register.html">Register</p></a>
-                <h4>Language : En <i class="fa-solid fa-chevron-down"></i></h4>
+                <a href="./login.html"><p>Login </a>/ <a href="./register.html">Register</p></a>
+                 <h4>Language : En <i class="fa-solid fa-chevron-down"></i></h4>
                 <h4>Currency : EUR <i class="fa-solid fa-chevron-down"></i></h4>
             </div>
         </div>
@@ -31,25 +31,25 @@
         </div>
                 <div class="inDivision">
                     <div class="dropDown">
-                <a href="./pages/fashion.html"><p>Fashion</p></a>          
+                <a href="./fashion.html"><p>Fashion</p></a>          
                         <div class="details">
                             <div class="dropCont">
                                 <div class="drop">
-                                    <a href="./pages/dresses.html"><h3>Dresses & Jumpsuits</h3></a>
+                                    <a href="./dresses.html"><h3>Dresses & Jumpsuits</h3></a>
                                     <p>Shorts</p>
                                     <p>Skirt</p>
                                     <p>Loungewear</p>
                                     <p>Trousers</p>
                                 </div>
                                 <div class="drop1">
-                                    <h3>Women T-shirt</h3>
+                                    <a href="./women t-shirt.html"><h3>Women T-shirt</h3></a>
                                     <p>Luggage & Travel</p>
                                     <p>Wallets & Belts</p>
                                     <p>Handbags</p>
                                     <p>Backpacks</p>
                                 </div>
                                 <div class="drop2">
-                                    <h3>Jackets & Blaze</h3>
+                                    <a href="./Jackets.html"><h3>Jackets & Blaze</h3></a>
                                     <p>Formal shoes</p>
                                     <p>Flip-flops</p>
                                     <p>Sandals</p>
@@ -60,25 +60,37 @@
                         </div>
                     </div>
         
-                    <a href="./pages/girls dress.html"><p>Girls Dress</p></a>
-                    <a href="./pages/men shoes.html"><p>Men Shoes</p></a>
-                    <a href="./pages/mens shirt.html"><p>Men Shirt</p></a>
-                    <a href="./pages/blog.html"><p>Blog</p></a>
+                    <a href="./girls dress.html"><p>Girls Dress</p></a>
+                    <a href="./men shoes.html"><p>Men Shoes</p></a>
+                    <a href="./mens shirt.html"><p>Men Shirt</p></a>
+                    <a href="./blog.html"><p>Blog</p></a>
                     <div class="item">
                         <p>More</p>
                         <div class="item1">
-                            <p>Jewellery</p>
-                            <p>Hand Watch</p>
-                            <p>Girls Sandals</p>
+                            <a href="./jewellery.html"><p>Jewellery</p></a>
+                            <a href="./hand watch.html"><p>Hand Watch</p></a>
+                            <a href="./girls sandals.html"><p>Girls Sandals</p></a>
                         </div>
                     </div>
                 </div>
+                <div class="imgIcons">
+                    <i class="fa-solid fa-magnifying-glass"></i>
+                    <i class="fa-regular fa-heart"></i>
+                    <div class="num">
+                        <i class="fa-solid fa-bag-shopping"></i>
+                        <p>0</p>
+                    </div>
+                </div>
+                <div class="menu">
+                    <i class="fa-solid fa-bars"></i>
+                </div>
+        </div>
         
     </div>     
     <div class="bgNav">
         <div class="secondNav">
-            <a href="#">Home</a>
-            <p>Girls Dress</p>
+            <a href="./index.html">Home</a>
+            <a href="./girls dress.html"><p>Girls Dress</p></a>
         </div>
     </div>
     <div class="fullImg">
